# cmake

./: CMakeLists.txt  farewell.cpp  greet.cpp  main.cpp
day1/: main.cpp
day2/: .matrix_ops.f90.swp
day3/: CMakeLists.txt  main.f90
day3/src/: CMakeLists.txt  matrix_ops.f90
day4/tests/: CMakeLists.txt
include/: greet.h
oldstuff/day1/: CMakeLists.txt  greet.cpp
oldstuff/day1/include/: greet.h
oldstuff/day2/: CMakeLists.txt
oldstuff/day3/src/: CMakeLists.txt
oldstuff/day4/: CMakeLists.txt
oldstuff/day4/tests/: test_matrix_ops.f90
oldstuff/template/: CMakeLists.txt
oldstuff/template/src/app/: main.f90
oldstuff/template/src/libs/: CMakeLists.txt
template/src/: CMakeLists.txt
template/src/app/: CMakeLists.txt
template/tests/: CMakeLists.txt
